Desafio SASS II SEO

--- a/pages/feng.html
+++ b/pages/feng.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>HOI</title>
+    <meta name="description" content="El feng shui observa y analiza los cambios en la energia de nuestro entorno y como influyen en nuestra vida.">
+    <meta name="keywords" content="FENG SHUI PROFESIONAL, BAGUA, ELEMENTOS, AREAS DEL BAGUA, CURAS FENG SHUI">
+    <title>HOI FENG SHUI</title>
     <link rel="stylesheet" href=https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css>
     <link rel="stylesheet" href="../css/stylenuevo.css">
     <script src="https://kit.fontawesome.com/82f5c4b4c3.js" crossorigin="anonymous"></script>
@@ -14,7 +16,7 @@
         <nav class="navbar navbar-expand-lg">
             <div class="container-fluid">
                 <a class="navbar-brand" href="#">
-                    <img src="../images/hoilogo.png" alt="" width="130" height="40">
+                    <img src="../images/logo-hoi-2.svg" alt="" width="130" height="40">
                     </a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <i class="fa-solid fa-bars"></i>
@@ -43,15 +45,16 @@
     </header>
     <section>
         <div class="card d-none d-md-block bg-dark text-white" id="portadahola"> 
-            <img src="../images/portada2.jpg" class ="card-img " alt="...">
+            <img src="../images/portada2.jpg" class ="card-img " alt="yoga casa">
         </div>
         <div class="row">
-          <p class="titulo-yogasection">Convierte tu casa en tu hogar ...</p>
+          <h1 class="titulo-yogasection">FENG SHUI</h1>
+          <p class="titulo-yogasection">Convierte tu casa en tu hogar.</p>
         </div>
         <div class="card" id="cardfeng">
             <div class="row g-0">
               <div class="col-md-4">
-                <img src="../images/elementos.jpg" class="img-fluid rounded" alt="...">
+                <img src="../images/elementos.jpg" class="img-fluid rounded" alt="elementos">
               </div>
               <div class="col-md-8">
                 <div class="card-body" id="elementos">
@@ -77,14 +80,14 @@
                 </div>
               </div>
               <div class="col-md-4">
-                <img src="../images/deco.jpg" class="img-fluid rounded" alt="...">
+                <img src="../images/deco.jpg" class="img-fluid rounded" alt="decoracion feng shui">
               </div>
             </div>
         </div>
         <div class="card" id="cardfeng3">
             <div class="row g-0">
               <div class="col-md-4">
-                <img src="../images/bagua.jpg" class="img-fluid rounded" alt="...">
+                <img src="../images/bagua.jpg" class="img-fluid rounded" alt="bagua">
               </div>
               <div class="col-md-8">
                 <div class="card-body" id="elementos">
@@ -98,17 +101,17 @@
         </div>
     </section>
     <footer>
-        <ul class="nav justify-content-center">
-            <li class="nav-item">
-                <a class="nav-link" href="#"><img src="../images/wtsp.png" width="25" height="25"></a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#"><img src="../images/in.png" width="25" height="25"></a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#"><img src="../images/gmail.png" width="25" height="25"></a>
-              </li>
-          </ul>
+      <ul class="nav justify-content-center">
+        <li class="nav-item">
+          <a class="nav-link" href="#"><img src="../images/wtsp.png" alt="wstp"></a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#"><img src="../images/in.png" alt="instagram"></a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#"><img src="../images/gmail.png" alt="gmail"></a>
+        </li>
+      </ul>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"></script>
 </body>
