--- a/pages/hola.html
+++ b/pages/hola.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>HOI</title>
+    <meta name="description" content="Hola, combino técnicas de Feng Shui y otras disciplinas para diseñar ambientes saludables.">
+    <meta name="keywords" content="FENG SHUI, DISEÑO, YOGA, MINDFULNESS, SALUD INTEGRAL">
+    <title>HOI ABOUT</title>
     <link rel="stylesheet" href=https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css>
     <link rel="stylesheet" href="../css/stylenuevo.css">
     <script src="https://kit.fontawesome.com/82f5c4b4c3.js" crossorigin="anonymous"></script>
@@ -14,7 +16,7 @@
         <nav class="navbar navbar-expand-lg">
             <div class="container-fluid">
                 <a class="navbar-brand" href="#">
-                    <img src="../images/hoilogo.png" alt="" width="130" height="40">
+                    <img src="../images/logo-hoi-2.svg" alt="" width="130" height="40">
                     </a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <i class="fa-solid fa-bars"></i>
@@ -43,7 +45,7 @@
     </header>
     <section>
         <div class="card d-none d-md-block bg-dark text-white" id="portadahola"> 
-            <img src="../images/pexels-content-pixie-2736497.jpg" class ="card-img " alt="...">
+            <img src="../images/pexels-content-pixie-2736497.jpg" class ="card-img " alt="decoración">
           </div>
         <div>
             <p id="titulohola">DISEÑO ESPACIOS SALUDABLES</p>
@@ -51,7 +53,7 @@
         <div class="card" id="cardhola">
             <div class="row g-0">
               <div class="col-md-4">
-                <img src="../images/1pexels-elina-fairytale-3822630.jpg" class="img-fluid rounded" alt="...">
+                <img src="../images/1pexels-elina-fairytale-3822630.jpg" class="img-fluid rounded" alt="yoga lifestyle">
               </div>
               <div class="col-md-8">
                 <div class="card-body" id="textohola">
@@ -71,36 +73,36 @@
                 <h5 class="card-title">Diseño</h5>
                 <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
               </div>
-              <img src="../images/nalenayurveda1.jpg" class="card-img-bottom" alt="...">
+              <img src="../images/nalenayurveda1.jpg" class="card-img-bottom" alt="asana">
             </div>
             <div class="card col-sm-12">
               <div class="card-body">
                 <h5 class="card-title">Yoga</h5>
                 <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
               </div>
-              <img src="../images/nalenayurveda2.jpg" class="card-img-bottom" alt="...">
+              <img src="../images/nalenayurveda2.jpg" class="card-img-bottom" alt="asana">
             </div>
             <div class="card col-sm-12">
               <div class="card-body">
                 <h5 class="card-title">Feng Shui</h5>
                 <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
               </div>
-              <img src="../images/elementosfeng.jpg" class="card-img-bottom" alt="...">
+              <img src="../images/elementosfeng.jpg" class="card-img-bottom" alt="asana">
             </div>
           </div>
     </section>
     <footer>
-        <ul class="nav justify-content-center">
-            <li class="nav-item">
-                <a class="nav-link" href="#"><img src="../images/wtsp.png" width="25" height="25"></a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#"><img src="../images/in.png" width="25" height="25"></a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#"><img src="../images/gmail.png" width="25" height="25"></a>
-              </li>
-          </ul>
+      <ul class="nav justify-content-center">
+        <li class="nav-item">
+          <a class="nav-link" href="#"><img src="../images/wtsp.png" alt="wstp"></a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#"><img src="../images/in.png" alt="instagram"></a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#"><img src="../images/gmail.png" alt="gmail"></a>
+        </li>
+      </ul>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"></script>
 </body>
