--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>HOI</title>
+    <meta name="description" content="En House of Irupe diseñamos espacios saludables utilizando el arte milenario del Feng Shui combinado con otras disciplinas.">
+    <meta name="keywords" content="FENG SHUI, DESARROLO PERSONAL, DISEÑO DE AMBIENTES, DECORACION, HOGAR">
+    <title>HOI FENG SHUI</title>
     <link rel="stylesheet" href=https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css>
     <link rel="stylesheet" href="./css/stylenuevo.css">
     <script src="https://kit.fontawesome.com/82f5c4b4c3.js" crossorigin="anonymous"></script>
@@ -14,7 +16,7 @@
         <nav class="navbar navbar-expand-lg">
             <div class="container-fluid">
                 <a class="navbar-brand" href="#">
-                    <img src="./images/hoilogo.png" alt="" width="130" height="40">
+                    <img src="./images/logo-hoi-2.svg" alt="HOI">
                     </a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-label="Toggle navigation">
                 <i class="fa-solid fa-bars"></i>
@@ -50,21 +52,21 @@
             </div>
             <div class="carousel-inner">
               <div class="carousel-item active">
-                <img src="./images/pexels-scott-webb-213727.jpg" class="d-block w-100" alt="...">
+                <img src="./images/pexels-scott-webb-213727.jpg" class="d-block w-100" alt="plantas decoración">
                 <div class="carousel-caption d-none d-md-block">
-                  <h4>House of Irupe</h4>
+                  <h1>House of Irupe</h1>
                   <p>Diseñamos espacios Saludables</p>
                 </div>
               </div>
               <div class="carousel-item">
-                <img src="./images/pexels-mikhail-nilov-6740754.jpg" class="d-block w-100" alt="...">
+                <img src="./images/pexels-mikhail-nilov-6740754.jpg" class="d-block w-100" alt="práctica yoga">
                 <div class="carousel-caption d-none d-md-block">
                   <h4>Yoga</h4>
                   <p>Como es adentro es afuera</p>
                 </div>
               </div>
               <div class="carousel-item">
-                <img src="./images/pexels-content-pixie-2736497.jpg" class="d-block w-100" alt="...">
+                <img src="./images/pexels-content-pixie-2736497.jpg" class="d-block w-100" alt="decoracion">
                 <div class="carousel-caption d-none d-md-block">
                   <h4>Feng Shui</h4>
                   <p>Convierte tu casa en tu hogar</p>
@@ -111,13 +113,13 @@
     <footer>
         <ul class="nav justify-content-center">
             <li class="nav-item">
-              <a class="nav-link" href="#"><img src="images/wtsp.png" width="25" height="25"></a>
+              <a class="nav-link" href="#"><img src="images/wtsp.png" alt="wstp"></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#"><img src="images/in.png" width="25" height="25"></a>
+              <a class="nav-link" href="#"><img src="images/in.png" alt="instagram"></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#"><img src="images/gmail.png" width="25" height="25"></a>
+              <a class="nav-link" href="#"><img src="images/gmail.png" alt="gmail"></a>
             </li>
           </ul>
     </footer>
