--- a/pages/yoga.html
+++ b/pages/yoga.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>HOI</title>
+    <meta name="description" content="A través de prácticas como el Yoga y la meditación podemos sentirnos mas equilibrados y también nuestro hogar.">
+    <meta name="keywords" content="YOGA, AYURVEDA, RUTINAS, DOSHAS, ASANAS, MEDITACION">
+    <title>HOI YOGA</title>
     <link rel="stylesheet" href=https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css>
     <link rel="stylesheet" href="../css/stylenuevo.css">
     <script src="https://kit.fontawesome.com/82f5c4b4c3.js" crossorigin="anonymous"></script>
@@ -14,7 +16,7 @@
         <nav class="navbar navbar-expand-lg">
             <div class="container-fluid">
                 <a class="navbar-brand" href="#">
-                    <img src="../images/hoilogo.png" alt="" width="130" height="40">
+                    <img src="../images/logo-hoi-2.svg" alt="" width="130" height="40">
                     </a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <i class="fa-solid fa-bars"></i>
@@ -49,15 +51,25 @@
             </div>
         </div>
         <div class="row">
-          <p class="titulo-yogasection">YOGA Y AYURVEDA</p>
+          <h1 class="titulo-yogasection">YOGA Y AYURVEDA</h1>
         </div>
         <div class="row">
           <div class="animacionyoga">
-            <img class="pelotitas" src="../images/Recurso 1.png">
-            <img class="pelotitas" src="../images/Recurso 2.png">
-            <img class="pelotitas" src="../images/Recurso 3.png">
-            <img class="pelotitas" src="../images/Recurso 4.png">
-            <img class="pelotitas" src="../images/Recurso 5.png">
+            <div class="pelotitas">
+              <img src="../images/fuego.png">
+            </div>
+            <div class="pelotitas">
+              <img src="../images/tierra.png">
+            </div>
+            <div class="pelotitas">
+              <img src="../images/agua.png">
+            </div>
+            <div class="pelotitas">
+              <img src="../images/metal.png">
+            </div>
+            <div class="pelotitas">
+              <img src="../images/madera.png">
+            </div>
            </div>
         </div>
         <div class="row row-cols-1 row-cols-md-3" id="sectionyoga">
@@ -90,17 +102,17 @@
         </div>
     </section>
     <footer>
-        <ul class="nav justify-content-center">
-            <li class="nav-item">
-                <a class="nav-link" href="#"><img src="../images/wtsp.png" width="25" height="25"></a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#"><img src="../images/in.png" width="25" height="25"></a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#"><img src="../images/gmail.png" width="25" height="25"></a>
-              </li>
-          </ul>
+      <ul class="nav justify-content-center">
+        <li class="nav-item">
+          <a class="nav-link" href="#"><img src="../images/wtsp.png" alt="wstp"></a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#"><img src="../images/in.png" alt="instagram"></a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#"><img src="../images/gmail.png" alt="gmail"></a>
+        </li>
+      </ul>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"></script>
 </body>
