Nuevo Diseño Hoi

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="keywords" content="FENG SHUI, DESARROLO PERSONAL, DISEÑO DE AMBIENTES, DECORACION, HOGAR">
     <title>HOI FENG SHUI</title>
     <link rel="stylesheet" href=https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css>
-    <link rel="stylesheet" href="./css/stylenuevo.css">
+    <link rel="stylesheet" href="./scss/stylenuevo.css">
     <script src="https://kit.fontawesome.com/82f5c4b4c3.js" crossorigin="anonymous"></script>
 </head>
 <body>
@@ -30,10 +30,10 @@
                     <a class="nav-link" href="./pages/hola.html">Hola!</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="./pages/yoga.html">Yoga</a>
+                    <a class="nav-link" href="./pages/feng.html">Feng Shui</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="./pages/feng.html">Feng</a>
+                    <a class="nav-link" href="./pages/lifestyle.html">Lifestyle</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="./pages/contacto.html">Contacto</a>
@@ -52,21 +52,21 @@
             </div>
             <div class="carousel-inner">
               <div class="carousel-item active">
-                <img src="./images/pexels-scott-webb-213727.jpg" class="d-block w-100" alt="plantas decoración">
+                <img src="./images/irupes.svg" class="d-block w-100" alt="plantas decoración">
                 <div class="carousel-caption d-none d-md-block">
                   <h1>House of Irupe</h1>
                   <p>Diseñamos espacios Saludables</p>
                 </div>
               </div>
               <div class="carousel-item">
-                <img src="./images/pexels-mikhail-nilov-6740754.jpg" class="d-block w-100" alt="práctica yoga">
+                <img src="./images/ilu-yoga.svg" class="d-block w-100" alt="práctica yoga">
                 <div class="carousel-caption d-none d-md-block">
                   <h4>Yoga</h4>
                   <p>Como es adentro es afuera</p>
                 </div>
               </div>
               <div class="carousel-item">
-                <img src="./images/pexels-content-pixie-2736497.jpg" class="d-block w-100" alt="decoracion">
+                <img src="./images/ilu-feng.svg" class="d-block w-100" alt="decoracion">
                 <div class="carousel-caption d-none d-md-block">
                   <h4>Feng Shui</h4>
                   <p>Convierte tu casa en tu hogar</p>
