--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -8,7 +8,7 @@
     <meta name="keywords" content="ANALISIS FENG SHUI, YOGA MOOD, DISEÑO DE AMBIENTES, TALLERES FENG SHUI">
     <title>HOI CONTACTO</title>
     <link rel="stylesheet" href=https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css>
-    <link rel="stylesheet" href="../css/stylenuevo.css">
+    <link rel="stylesheet" href="../scss/stylenuevo.css">
     <script src="https://kit.fontawesome.com/82f5c4b4c3.js" crossorigin="anonymous"></script>
 </head>
 <body>
@@ -30,11 +30,11 @@
                         <a class="nav-link" href="../pages/hola.html">Hola</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="../pages/yoga.html">Yoga</a>
+                      <a class="nav-link" href="../pages/feng.html">Feng Shui</a>
                       </li>
                     <li class="nav-item">
-                    <a class="nav-link" href="../pages/feng.html">Feng</a>
-                    </li>
+                        <a class="nav-link" href="../pages/lifestyle.html">Lifestyle</a>
+                      </li>
                     <li class="nav-item">
                         <a class="nav-link active" style= color:cadetblue aria-current="page" href="#">Contacto</a>
                     </li>
