--- a/pages/hola.html
+++ b/pages/hola.html
@@ -8,7 +8,7 @@
     <meta name="keywords" content="FENG SHUI, DISEÑO, YOGA, MINDFULNESS, SALUD INTEGRAL">
     <title>HOI ABOUT</title>
     <link rel="stylesheet" href=https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css>
-    <link rel="stylesheet" href="../css/stylenuevo.css">
+    <link rel="stylesheet" href="../scss/stylenuevo.css">
     <script src="https://kit.fontawesome.com/82f5c4b4c3.js" crossorigin="anonymous"></script>
 </head>
 <body>
@@ -30,10 +30,11 @@
                   <li class="nav-item">
                     <a class="nav-link active" style= color:cadetblue aria-current="page" href="#">Hola!</a>
                   </li>
-                    <a class="nav-link" href="../pages/yoga.html">Yoga</a>
-                  </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="../pages/feng.html">Feng</a>
+                    <a class="nav-link" href="../pages/feng.html">Feng Shui</a>
+                  </li>
+                  <li>
+                    <a class="nav-link" href="../pages/lifestyle.html">Lifestyle</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="../pages/contacto.html">Contacto</a>
@@ -44,23 +45,30 @@
           </nav>
     </header>
     <section>
-        <div class="card d-none d-md-block bg-dark text-white" id="portadahola"> 
-            <img src="../images/pexels-content-pixie-2736497.jpg" class ="card-img " alt="decoración">
+        <div class="card d-md-block bg-dark text-white" id="portadahola"> 
+            <img src="../images/holaportada.svg" class ="card-img " alt="decoración">
+            <div class="card-img-overlay">
+              <div class="card-body" id="house-home1">
+                <p class="card-title">Hola!</p>
+                <p class="card-text d-none d-md-block">
+                  Combinamos herramientas y recursos del Feng Shui con otras disciplinas como el Yoga, Ayurveda y Reiki para analizar espacios y hábitos de vida y diseñar un
+                  ambiente más equilibrado.</p>
+              </div>
+            </div>
           </div>
         <div>
-            <p id="titulohola">DISEÑO ESPACIOS SALUDABLES</p>
+            <p id="titulohola">DISEÑAMOS ESPACIOS SALUDABLES</p>
         </div>
         <div class="card" id="cardhola">
             <div class="row g-0">
               <div class="col-md-4">
-                <img src="../images/1pexels-elina-fairytale-3822630.jpg" class="img-fluid rounded" alt="yoga lifestyle">
+                <img src="../images/objetos.svg" class="img-fluid rounded" alt="yoga lifestyle">
               </div>
               <div class="col-md-8">
                 <div class="card-body" id="textohola">
                   <h5 class="card-title">Hola!</h5>
-                  <p class="card-text">Soy Denise,
-                    Me forme como diseñadora e instructora de Yoga y también estudié Ayurveda y Feng Shui.
-                    Combino herramientas y recursos de estas áreas para analizar espacios y hábitos de vida y diseñar un
+                  <p class="card-text">
+                    Combinamos herramientas y recursos del Feng Shui integrado con otras disciplinas como el Yoga, Ayurveda, Reiki y más, para analizar espacios y hábitos de vida y diseñar un
                     ambiente para acercarte más a una vida equilibrada.</p>
                   <p class="card-text"><small class="text-muted">Querés saber mas?</small></p>
                 </div>
@@ -70,24 +78,24 @@
           <div class="card-group">
             <div class="card col-sm-12" id="diseño">
               <div class="card-body">
-                <h5 class="card-title">Diseño</h5>
+                <h5 class="card-title">Feng Shui</h5>
                 <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
               </div>
               <img src="../images/nalenayurveda1.jpg" class="card-img-bottom" alt="asana">
             </div>
             <div class="card col-sm-12">
               <div class="card-body">
-                <h5 class="card-title">Yoga</h5>
+                <h5 class="card-title">Bagua</h5>
                 <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
               </div>
-              <img src="../images/nalenayurveda2.jpg" class="card-img-bottom" alt="asana">
+              <img src="../images/bagua.svg" class="card-img-bottom" alt="asana">
             </div>
             <div class="card col-sm-12">
               <div class="card-body">
-                <h5 class="card-title">Feng Shui</h5>
+                <h5 class="card-title">Yoga</h5>
                 <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
               </div>
-              <img src="../images/elementosfeng.jpg" class="card-img-bottom" alt="asana">
+              <img src="../images/asana.svg" class="card-img-bottom" alt="asana">
             </div>
           </div>
     </section>
