--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <title>HOI FENG SHUI</title>
     <link rel="stylesheet" href=https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css>
     <link rel="stylesheet" href="./scss/stylenuevo.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/82f5c4b4c3.js" crossorigin="anonymous"></script>
 </head>
 <body>
@@ -82,29 +85,53 @@
               <span class="visually-hidden">Next</span>
             </button>
           </div>
-          <div class="card" id="card-home">
-            <div class="card-body" id="textohome">
-              Los espacios que habitamos son una extensión de nuestra esencia y un reflejo de nuestro mundo interior.
-              Nuestro hogar es una herramienta de autoconocimiento y tambien permite a las demás personas que lleguen a conocer más de nosotros. 
-              La decoración de nuestro espacio expresa la identidad de uno mismo, e infiere en nuestra vida de forma directa. Te invito a conocer mas...  
-            </div>
-          </div>
-          <div class="row" id="homeextra">
-            <div class="col-sm-6">
-              <div class="card" id="card-links">
-                <div class="card-body">
-                  <h5 class="card-title">YOGA</h5>
-                  <p class="card-text">Te gustaría personalizar tu práctica de Yoga?</p>
-                  <a href="#" class="btn btn-primary">Si!</a>
+          <div id="section-home">
+            <h3>
+              Potencia tu vida con Feng Shui
+            </h3>
+            <div class="row" id="homeextra">
+              <div class="col-sm-4">
+                <div class="card">
+                  <div class="card-body">
+                    <img src="images/bagua.svg" alt="icon">
+                    <a href="./pages/feng.html" class="btn btn-primary">FENG SHUI</a>
+                    <p class="card-text">Analizamos espacios para mejorar la vida de las personas que lo habitan.</p>
+                  </div>
+                </div>
+              </div>
+              <div class="col-sm-4">
+                <div class="card">
+                  <div class="card-body">
+                    <img src="images/deco-icon.svg" alt="icon">
+                    <a href="./pages/hola.html" class="btn btn-primary">DECO</a>
+                    <p class="card-text">Tu hogar como herramienta de autoconocimiento expresa identidad</p>
+                  </div>
+                </div>
+              </div>
+              <div class="col-sm-4">
+                <div class="card">
+                  <div class="card-body">
+                    <img src="images/yogui-icon.svg" alt="icon">
+                    <a href="./pages/lifestyle.html" class="btn btn-primary">LIFESTYLE</a>
+                    <p class="card-text">Ofrecemos recursos para tu desarrollo personal</p>
+                  </div>
                 </div>
               </div>
             </div>
-            <div class="col-sm-6">
-              <div class="card" id="card-links2">
-                <div class="card-body">
-                  <h5 class="card-title">FENG SHUI</h5>
-                  <p class="card-text">Te gustaría asesorarte en feng shui?</p>
-                  <a href="#" class="btn btn-primary">Si!</a>
+            <div class="card" id="card-home">
+              <div class="row g-0">
+                <div class="col-md-4">
+                  <img src="./images/savasana.svg" class="img-fluid rounded" alt="yoga lifestyle">
+                </div>
+                <div class="col-md-8">
+                  <div class="card-body" id="textohola">
+                    <h5 class="card-title">PROMO FENG SHUI > $5000</h5>
+                    <p class="card-text">
+                      Entrevista inicial por zoom + análisis de BAGUA FENG SHUI del hogar con sugerencias de como aplicar "curas" en cada ambiente.</p>
+                    <p class="card-text"><small class="text-muted">Dejanos tu mail para más información!</small></p>
+                    <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+                    <button type="enviar" class="btn btn-primary">Enviar</button>
+                  </div>
                 </div>
               </div>
             </div>
@@ -113,13 +140,13 @@
     <footer>
         <ul class="nav justify-content-center">
             <li class="nav-item">
-              <a class="nav-link" href="#"><img src="images/wtsp.png" alt="wstp"></a>
+              <a class="nav-link" href="https://api.whatsapp.com/send?phone=541158539385&text=Hola!"><img src="images/wtsp.png" alt="wstp"></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#"><img src="images/in.png" alt="instagram"></a>
+              <a class="nav-link" href="https://instagram.com/houseofirupe?igshid=YmMyMTA2M2Y="><img src="images/in.png" alt="instagram"></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#"><img src="images/gmail.png" alt="gmail"></a>
+              <a class="nav-link" href="https://accounts.google.com/signin/v2/identifier?service=mail&passive=true&rm=false&continue=https%3A%2F%2Fmail.google.com%2Fmail%2F%3Fhl%3Des-419&ss=1&scc=1&ltmpl=default&ltmplcache=2&hl=es-419&emr=1&osid=1&flowName=GlifWebSignIn&flowEntry=ServiceLogin"><img src="images/gmail.png" alt="gmail"></a>
             </li>
           </ul>
     </footer>
