--- a/pages/feng.html
+++ b/pages/feng.html
@@ -9,6 +9,9 @@
     <title>HOI FENG SHUI</title>
     <link rel="stylesheet" href=https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css>
     <link rel="stylesheet" href="../scss/stylenuevo.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/82f5c4b4c3.js" crossorigin="anonymous"></script>
 </head>
 <body>
@@ -44,12 +47,14 @@
           </nav>
     </header>
     <section>
-        <div class="card d-md-block bg-dark text-white" id="portadahola"> 
+        <div class="card d-md-block bg-dark text-white" id="portadafeng"> 
             <img src="../images/ilu-feng.svg" class ="card-img " alt="yoga casa">
             <div class="card-img-overlay" id="house-home2">
-              <p class="card-title">¿ CÓMO HABITAS TU ESPACIO ?</p>
+              <div class="card-body">
+                <p class="card-title">¿ CÓMO HABITAS TU ESPACIO ?</p>
               <p class="card-text d-none d-md-block">
               Te sentis cómodo en él, prendes sahumerios, te gusta tener plantas, percibis la energia en tu entorno, dejas ir las cosas que ya no usas?</p>
+              </div>
             </div>
         </div>
         <div class="row">
@@ -112,13 +117,13 @@
     <footer>
       <ul class="nav justify-content-center">
         <li class="nav-item">
-          <a class="nav-link" href="#"><img src="../images/wtsp.png" alt="wstp"></a>
+          <a class="nav-link" href="https://api.whatsapp.com/send?phone=541158539385&text=Hola!"><img src="../images/wtsp.png" alt="wstp"></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#"><img src="../images/in.png" alt="instagram"></a>
+          <a class="nav-link" href="https://instagram.com/houseofirupe?igshid=YmMyMTA2M2Y="><img src="../images/in.png" alt="instagram"></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#"><img src="../images/gmail.png" alt="gmail"></a>
+          <a class="nav-link" href="https://accounts.google.com/signin/v2/identifier?service=mail&passive=true&rm=false&continue=https%3A%2F%2Fmail.google.com%2Fmail%2F%3Fhl%3Des-419&ss=1&scc=1&ltmpl=default&ltmplcache=2&hl=es-419&emr=1&osid=1&flowName=GlifWebSignIn&flowEntry=ServiceLogin"><img src="../images/gmail.png" alt="gmail"></a>
         </li>
       </ul>
     </footer>
