--- a/pages/hola.html
+++ b/pages/hola.html
@@ -9,6 +9,9 @@
     <title>HOI ABOUT</title>
     <link rel="stylesheet" href=https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css>
     <link rel="stylesheet" href="../scss/stylenuevo.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/82f5c4b4c3.js" crossorigin="anonymous"></script>
 </head>
 <body>
@@ -46,7 +49,7 @@
     </header>
     <section>
         <div class="card d-md-block bg-dark text-white" id="portadahola"> 
-            <img src="../images/holaportada.svg" class ="card-img " alt="decoración">
+            <img src="../images/hola-portada.svg" class ="card-img " alt="decoración">
             <div class="card-img-overlay">
               <div class="card-body" id="house-home1">
                 <p class="card-title">Hola!</p>
@@ -59,56 +62,40 @@
         <div>
             <p id="titulohola">DISEÑAMOS ESPACIOS SALUDABLES</p>
         </div>
-        <div class="card" id="cardhola">
-            <div class="row g-0">
-              <div class="col-md-4">
-                <img src="../images/objetos.svg" class="img-fluid rounded" alt="yoga lifestyle">
-              </div>
-              <div class="col-md-8">
-                <div class="card-body" id="textohola">
-                  <h5 class="card-title">Hola!</h5>
-                  <p class="card-text">
-                    Combinamos herramientas y recursos del Feng Shui integrado con otras disciplinas como el Yoga, Ayurveda, Reiki y más, para analizar espacios y hábitos de vida y diseñar un
-                    ambiente para acercarte más a una vida equilibrada.</p>
-                  <p class="card-text"><small class="text-muted">Querés saber mas?</small></p>
-                </div>
-              </div>
-            </div>
-          </div>
           <div class="card-group">
             <div class="card col-sm-12" id="diseño">
               <div class="card-body">
                 <h5 class="card-title">Feng Shui</h5>
-                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                <p class="card-text">Analizamos el flujo de energia de espacios para mejorar la vida de las personas que lo habitan y diseñamos un plan para equilibrar los elementos en él.</p>
               </div>
-              <img src="../images/nalenayurveda1.jpg" class="card-img-bottom" alt="asana">
+              <img src="../images/living.svg" class="card-img-bottom" alt="asana">
             </div>
             <div class="card col-sm-12">
               <div class="card-body">
                 <h5 class="card-title">Bagua</h5>
-                <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+                <p class="card-text">El Bagua es una herramienta de feng shui muy importante e indispensable cuando deseamos armonizar un lugar y los elementos en él.</p>
               </div>
-              <img src="../images/bagua.svg" class="card-img-bottom" alt="asana">
+              <img src="../images/bagua2.svg" class="card-img-bottom" alt="asana">
             </div>
             <div class="card col-sm-12">
               <div class="card-body">
                 <h5 class="card-title">Yoga</h5>
-                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+                <p class="card-text">Los espacios que habitamos son una extensión de nuestra esencia y un reflejo de nuestro mundo interior</p>
               </div>
-              <img src="../images/asana.svg" class="card-img-bottom" alt="asana">
+              <img src="../images/savasana.svg" class="card-img-bottom" alt="asana">
             </div>
           </div>
     </section>
     <footer>
       <ul class="nav justify-content-center">
         <li class="nav-item">
-          <a class="nav-link" href="#"><img src="../images/wtsp.png" alt="wstp"></a>
+          <a class="nav-link" href="https://api.whatsapp.com/send?phone=541158539385&text=Hola!"><img src="../images/wtsp.png" alt="wstp"></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#"><img src="../images/in.png" alt="instagram"></a>
+          <a class="nav-link" href="https://instagram.com/houseofirupe?igshid=YmMyMTA2M2Y="><img src="../images/in.png" alt="instagram"></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#"><img src="../images/gmail.png" alt="gmail"></a>
+          <a class="nav-link" href="https://accounts.google.com/signin/v2/identifier?service=mail&passive=true&rm=false&continue=https%3A%2F%2Fmail.google.com%2Fmail%2F%3Fhl%3Des-419&ss=1&scc=1&ltmpl=default&ltmplcache=2&hl=es-419&emr=1&osid=1&flowName=GlifWebSignIn&flowEntry=ServiceLogin"><img src="../images/gmail.png" alt="gmail"></a>
         </li>
       </ul>
     </footer>
